[project]
name = "google-sheets-integration"
description = "A custom node for ComfyUI that enables integration with Google Sheets. It allows reading from and writing to Google Sheets directly from ComfyUI workflows, making it easy to import and export data."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lazniak/comfyui_google_sheets_integration"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pablogfx"
DisplayName = "google-sheets-integration"
Icon = ""
